app/styles/main.css
/**
 * Spotify: #84bd00;
 *
 * light-green: #8bc34a;
 *
 */
html {
  max-height: 448px;
}

.overlay {
  background-color: #12121A;
  height: 100%;
  left: 0;
  position: absolute;
  top: 0;
  width: 100%;
  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=65);
  opacity: 0.65;
}

.text-error {
  color: #f44336 !important;
}

md-icon { font-size: 24px; line-height: 24px;}

.md-tile-content .statistic {
  font-size: 12px;
  white-space: nowrap;
  overflow: hidden;
}
.md-tile-content .statistic > md-icon {font-size: 12px; line-height: 12px; color: #555; width: 12px; height: 12px;}
.md-tile-content .statistic > span {margin-right: 10px; vertical-align: middle;}

md-tabs { height: 48px; overflow: hidden;}
md-tabs.main-nav md-tab,
md-tabs.main-nav .md-header {
    background-color: #1C1C1F !important;
}

md-tabs.main-nav md-tab-label {
    color: #ccc !important;
}

md-tabs.main-nav .active md-tab-label {
    color: #fff !important;
}

md-tabs.main-nav md-tab {
    padding: 20px 10px;
}
md-tabs.main-nav md-tab md-itemcon {
  width: 15px;
  height: 15px;
}

.md-header-items-container { font-size: 12px; line-height: 12px;}

md-tab-label > span { vertical-align: bottom; line-height: 18px; }

md-toolbar.bottom-toolbar { background-color: #1C1C1F; min-height: 44px; color: #bbb; box-shadow: none;}
md-toolbar.bottom-toolbar .md-toolbar-tools { height: 40px; max-height: 40px; padding-left: 0;}
md-toolbar.bottom-toolbar .md-toolbar-tools .md-button {color: #bbb; font-size: 12px;}
md-toolbar.bottom-toolbar .md-toolbar-tools .md-button md-icon { font-size: 18px; line-height: 18px; width: 18px; height: 18px;}

/*
md-tabs { border-bottom: 1px solid #f2f2f2; }
*/
md-tabs.md-default-theme  md-tabs-ink-bar { color: #8bc34a; background-color: #8bc34a;}

md-divider.md-default-theme {
  border-top-color: #f2f2f2;
}

md-dialog {color: #bbb;}
md-dialog .md-actions {padding: 0 16px 16px 16px; height: 40px;}
md-dialog .md-actions .md-button {
  color: #bbb;
}
md-dialog md-input-container.md-default-theme .md-input,
md-dialog md-input-container.md-default-theme label,
md-dialog md-input-container.md-default-theme .md-placeholder {
  text-shadow: none;
}

#configuration .float-container { margin: 15px; }
#configuration .float-container .float-left{ float: left; }
#configuration .float-container .float-right{ float: right; }
#configuration .float-container .float-right span { line-height: 20px;}
#configuration .float-container md-icon {font-size: 18px; line-height: 18px; width: 29px;}
#configuration .float-container md-input-container {padding-bottom: 0;}

md-autocomplete ul li:hover, md-autocomplete ul li.selected {
  background-color: #ddd;
}

.search-btn { min-width: 10em; line-height: 25px;}

.list-hover md-item:hover  { cursor: pointer;}
.list-hover md-item:hover md-item-content h3{ font-weight: bold; }


.tab-heading { margin-bottom: 10px; }
.back-link md-icon { width: 16px; height: 16px; font-size: 16px; line-height: 16px; margin-right: 7px; vertical-align: top;}

.chosen-category {
  text-align: right;
}
.chosen-category h3{
  display: inline-block;
  margin: 0px;
  padding: 5px 0;
  color: #8bc34a;
  border-bottom: 1px solid #8bc34a;
  max-width: 250px;
  min-width: 100px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}


body#soundcloudify {
  width: 660px;
  height: 448px;
  margin: 0;
  overflow: hidden;
    -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -webkit-user-select: none;
}

#main {
  position: relative;
}

#player {
	width: 220px;
  height: 448px;
  max-height: 448px;
  background-color: #1C1C1F;
  overflow: hidden;
}

#player .artwork {
    position: relative;
    width: 220px;
    height: 220px;
}

#player .padding {
  padding: 0 15px;
}

#player .artwork .show-on-hover {
  opacity: 0;
  -webkit-transition: all .25s ease-in-out;
}

#player .artwork .show-on-hover.always-show {
  opacity: 1;
}

#player .artwork:hover .show-on-hover {
  opacity: 1;
}

#player .artwork .show-on-hover  a {
  position: absolute;
  bottom: 10px;
  right: 10px;
  font-size: 26px;
}

#player .lastfm-manual {
  position: absolute;
  left: 0;
  right: 0;
  padding: 20px 10px;
}

#player .lastfm-manual strong {
  display: block;
  color: rgb(244,67,54);
  padding-bottom: 10px;
}

#player .lastfm-manual md-input-container {
  padding-bottom: 10px;
}

#player .lastfm-manual .md-button {
  float: right;
}

#player .lastfm-manual h4{
  color: #fff;
}

#player .view-original-link {text-decoration: none;}
#player .view-original-link .icon-soundcloud { color: #FBFBFC; }
#player .view-original-link .icon-youtube { color: #FBFBFC; font-size: 16px;}



#player .artwork > img{
  position: absolute;
  top: 0;
  left: 0;
	width: 100%;
	height: 100%;
}

#player .track-title {
  color: #FBFBFC;
  text-align: center;
  z-index: 1;
  overflow: hidden;
}

  #player .track-title > h3 {
    font-size: 14px;
    white-space: nowrap;
  }

  #player .track-title > h4 {
    font-size: 12px;
    margin: 10px 0;
    font-weight: 100;
  }

#player .pretty-time {
  color: #ffffff;
  width: 100%;
  padding: 5px;
  font-size: 12px;
}

#player .pretty-time .duration {
  text-align: right;
  z-index: 1;
}

.player-controls {margin: 0px;}
.player-controls .player-control {color: #FBFBFC;}

.player-sub-controls {margin-top: 10px;}
.player-sub-controls .player-control {color: #bbb; font-size: 18px; width: 40px;}
.player-sub-controls .player-control.control-last-fm > span {font-size: 12px; position: absolute; top: 0; right: 2px;}
.player-sub-controls .player-control .repeat-one {position: absolute; top: 5px; right: 5px; font-size: 10px; font-weight: bold;}
.player-sub-controls .player-control md-icon { width: 12px; height: 12px;}

.volume-controls {margin: 10px 0; height: 48px;}
.volume-controls md-icon {color: #555;}
.volume-controls md-icon:last-child {text-align: right;}

md-sidenav.now-playing { width: 440px; min-width: 440px; max-width: 440px;}
/* ... */

